test/expected/set_explicit-int_x.out
set explicit-int=x
                 ^
18: error: "x": invalid value for explicit-int; must be *, -, i, u, or {[u]{i|s|l[l]}[,]}+
